# UnoLoto

UnoStoloto/: .dockerignore  Dockerfile  docker-compose.yaml  main.py  nohup.out  pyproject.toml  requirements.txt
UnoStoloto/alembic/: env.py  env.py.utf8
UnoStoloto/alembic/versions/: 1a0d7d999ba1_create_tables.py  53a06a9bde0f_initial_tables.py
UnoStoloto/app/: router.py  schemas.py  schemas.py.utf8
UnoStoloto/core/: __init__.py  config.py
UnoStoloto/core/models/: __init__.py  base.py  db_helper.py
UnoStoloto/core/models/lottery_games/: crud.py  lottery_games.py
UnoStoloto/static/profile/: profile.html  script.js  styles.css
dp-react-app/: Dockerfile  docker-compose.yaml  nohup.out  package-lock.json  package.json
dp-react-app/src/: App.css  App.js
dp-react-app/src/components/GamePage/: GamePage.jsx
dp-react-app/src/components/LoginPage/: LoginPage.css  LoginPage.jsx
dp-react-app/src/components/RegisterPage/: RegisterPage.css  RegisterPage.jsx
dp-react-app/src/components/UnoGame/: UnoGame.css  UnoGame.jsx
